fixed alignment and added usa flag img

--- a/style.css
+++ b/style.css
@@ -8,12 +8,21 @@ img{
 .icon{
     height:18px;
 }
+#top-nav{
+    border-top: 2px;
+    border-color: black;
+    display:inline-block;
+}
+#top-nav>div, #links>a{
+    display:inline-flex;
+    justify-content: center;
+    align-items: center;
+}
 #logo{
     padding:18px;
     background-color:#e60012;
     justify-content: center;
     align-items: center;
-    display:inline-block;
 }
 #ntndo-logo{
     filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(195deg) brightness(107%) contrast(102%);
@@ -25,17 +34,10 @@ img{
     width:450px;
     justify-content: center;
     align-items: center;
-    display:inline-block;
 }
 #links{
     display:flex;
     width:521px;
     justify-content: center;
     align-content: center;
-    display:inline-block;
-}
-#top-nav{
-    border-top: 2px;
-    border-color: black;
-    display:inline-block;
 }
